--- a/EIPS/eip-7950.md
+++ b/EIPS/eip-7950.md
@@ -4,7 +4,8 @@ title: Encode chain id with transaction hash
 description: Way to encode a chain ID and transaction hash into a unique string format
 author: Lauri Peltonen (@microbecode)
 discussions-to: https://ethereum-magicians.org/t/a-new-standard-for-encoding-chain-id-transaction-hash/23782
-status: Review
+status: Last Call
+last-call-deadline: 2025-09-05
 type: Standards Track
 category: Interface
 created: 2025-05-22
